--- a/one.html
+++ b/one.html
@@ -11,7 +11,7 @@
     <div class="bg-black w-screen min-h-screen">
         <main class="container mx-auto w-full bg-gray-900 text-white p-8 max-w-[940px]">
             <div class="border border-gray bg-black p-4">
-                <div class="">
+                <div class="flex flex-grow justify-between mb-4">
                     <button class="bg-blue-900 text-white p-2">Button</button>
                     <div class="">
                         <button class="bg-blue-500 text-black p-2">Button</button>
@@ -20,26 +20,26 @@
                 </div>
                 <!-- Card 1 -->
                 <section class="relative overflow-hidden border border-gray-800 p-4">
-                    <div class="">
-                        <div class="">
+                    <div class="flex flex-col lg:flex-row lg:justify-between">
+                        <div class="flex flex-col gap-4 order-2 lg:order-1">
                             <div class="uppercase">
-                                <div class="">
-                                    <span class="h-5 w-5 bg-blue-500">
+                                <div class="flex-row flex items-center lg:items-start lg:gap-1 lg:flex-col">
+                                    <span class="h-5 w-5 bg-blue-500 block order-2 lg:order-1">
                                     </span>
-                                    <h1 class="text-lg"> Moongate Club 1</h1>
+                                    <h1 class="text-lg flex-grow lg:order-2"> Moongate Club 1</h1>
                                 </div>
                                 <h2 class="text-white/70 text-base">General Member</h2>
                                 <h3 class="text-white/70 text-sm">12 Feb 23 - 31 Dec 25</h3>
                                 <h3 class="text-white/70 text-sm">Organizer</h3>
                             </div>
-                            <div class="">
+                            <div class="flex gap-4 flex-col lg:flex-row">
                                 <button class="bg-blue-900 text-white p-2">Button</button>
                                 <button class="bg-blue-500 text-black p-2">Button</button>
                                 <button class="bg-gray-800 text-white p-2">Button</button>
                             </div>
                         </div>
-                        <div class="">
-                            <p class=" text-primary"> x1 </p>
+                        <div class="flex flex-col lg:flex-row gap-4 order-1 lg:order-2">
+                            <p class=" text-primary flex-grow text-right lg:text-left"> x1 </p>
                             <img class="object-contain" src="https://picsum.photos/200" alt="" />
                         </div>
                     </div>
